--- a/views/src/App.css
+++ b/views/src/App.css
@@ -26,7 +26,7 @@ body {
 *****   Home View   *****
 ************************/
 
-.testView {
+.chartsView {
   width: 1200px;
   margin: 30px auto;
 }
