--- a/views/src/App.css
+++ b/views/src/App.css
@@ -26,7 +26,7 @@ body {
 *****   Home View   *****
 ************************/
 
-.chartsView {
+.homeView {
   width: 1200px;
   margin: 30px auto;
 }
@@ -114,6 +114,7 @@ body {
 
 .vehicleList {
   width: 1360px;
+  height: 500px;
   margin: 20px auto 300px;
 }
 
