filtering for last update

--- a/views/src/App.css
+++ b/views/src/App.css
@@ -209,6 +209,10 @@ body {
 *****   Home View   *****
 ************************/
 
+.measureDate {
+  margin-top: 5px;
+}
+
 .chartsView {
   clear: both;
   margin-top: 10px;
