--- a/views/src/App.css
+++ b/views/src/App.css
@@ -180,6 +180,14 @@ body {
   width: 160px;
 }
 
+.adminView #searchTerm {
+  height: 20px;
+  width: 120px;
+  margin-left: 30px;
+  border-radius: 10px;
+  font-size: 0.7rem;
+}
+
 
 
 table.vehicleList {
